# blockcarbon-main

blockcarbon-private-main/: README.md  blockcarbon.cabal  default.nix  hie.yaml  release.nix  shell.nix
blockcarbon-private-main/nix/: default.nix
blockcarbon-private-main/nix/pkgs/haskell/: haskell.nix
blockcarbon-private-main/pab/: Main-sim.hs  PabContract.hs
blockcarbon-private-main/src/: OffChain.hs  OnChain.hs  Types.hs  Utils.hs
ecosystem/: overview.md
